<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.CheckoutActivity">

    <TextView
        android:id="@+id/checkoutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/checkout_header"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/checkoutSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout_sum"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkoutPay"
        app:layout_constraintStart_toStartOf="@+id/checkoutDiscount"
        app:layout_constraintTop_toBottomOf="@+id/checkoutDiscount"
        app:layout_constraintVertical_bias="0.90999997" />

    <TextView
        android:id="@+id/checkoutSumValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/checkoutSummary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkoutSummary"
        app:layout_constraintVertical_bias="0.0"
        tools:text="1000 руб" />

    <Button
        android:id="@+id/checkoutPay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_pay"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/checkoutPersonalDataMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/checkoutPersonalDataThirdName"
        app:layout_constraintTop_toBottomOf="@+id/checkoutPersonalDataThirdName" />

    <TextView
        android:id="@+id/checkoutPersonalDataHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/checkout_personal_data_header"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/checkoutHeader"
        app:layout_constraintTop_toBottomOf="@+id/checkoutHeader" />

    <EditText
        android:id="@+id/checkoutPersonalDataSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/checkoutPersonalDataHeader"
        app:layout_constraintTop_toBottomOf="@+id/checkoutPersonalDataHeader" />

    <EditText
        android:id="@+id/checkoutPersonalDataName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/checkoutPersonalDataSurname"
        app:layout_constraintTop_toBottomOf="@+id/checkoutPersonalDataSurname" />

    <EditText
        android:id="@+id/checkoutPersonalDataThirdName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/third_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/checkoutPersonalDataName"
        app:layout_constraintTop_toBottomOf="@+id/checkoutPersonalDataName" />

    <TextView
        android:id="@+id/checkoutContentOfOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/content_of_order"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/checkoutPersonalDataMobile"
        app:layout_constraintTop_toBottomOf="@+id/checkoutPersonalDataMobile" />

    <TextView
        android:id="@+id/checkoutNumberOfProducts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/checkoutContentOfOrder"
        app:layout_constraintTop_toBottomOf="@+id/checkoutContentOfOrder"
        tools:text="Товары в корзине(1)" />

    <TextView
        android:id="@+id/checkoutValueOfNumberOfProducts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/checkoutNumberOfProducts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkoutNumberOfProducts"
        app:layout_constraintVertical_bias="0.0"
        tools:text="1500 руб" />

    <TextView
        android:id="@+id/checkoutDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/discount"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/checkoutNumberOfProducts"
        app:layout_constraintTop_toBottomOf="@+id/checkoutNumberOfProducts" />

    <TextView
        android:id="@+id/checkoutValueOfDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/checkoutDiscount"
        app:layout_constraintEnd_toEndOf="@+id/checkoutValueOfNumberOfProducts"
        app:layout_constraintTop_toTopOf="@+id/checkoutDiscount"
        tools:text="-500 руб" />

    <TextView
        android:id="@+id/tipForMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_for_mobile"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/checkoutPersonalDataMobile"
        app:layout_constraintStart_toStartOf="@+id/checkoutPersonalDataMobile"
        app:layout_constraintTop_toBottomOf="@+id/checkoutPersonalDataMobile" />

    <ImageView
        android:id="@+id/checkoutBackButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_navigate_before"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>